--- a/biblio.bib
+++ b/biblio.bib
@@ -276,3 +276,21 @@
 	doi = {10.1016/S0927-0507(03)10008-4},
 	pages = {483--554},
 }
+
+
+@article{wets_stochastic_1974,
+	title = {Stochastic {Programs} with {Fixed} {Recourse}: {The} {Equivalent} {Deterministic} {Program}},
+	volume = {16},
+	issn = {0036-1445, 1095-7200},
+	shorttitle = {Stochastic {Programs} with {Fixed} {Recourse}},
+	url = {http://epubs.siam.org/doi/10.1137/1016053},
+	doi = {10.1137/1016053},
+	language = {en},
+	number = {3},
+	urldate = {2024-06-25},
+	journal = {SIAM Review},
+	author = {Wets, Roger J.-B.},
+	month = jul,
+	year = {1974},
+	pages = {309--339},
+}
