--- a/internship_pisa.tex
+++ b/internship_pisa.tex
@@ -4,6 +4,7 @@
 \usepackage{algorithm2e}
 \usepackage{amsmath}
 \usepackage{amsfonts}
+\usepackage{enumitem}
 \usepackage{amssymb}
 \usepackage[left=2cm,right=2cm,top=3cm,bottom=3cm]{geometry}
 \usepackage{graphicx}
@@ -36,7 +37,7 @@
 \ifdefined\example\else \newtheorem{example}{Example}\fi
 
 \newcommand{\argmin}{\mathop{\arg\min}}
-
+\crefformat{enumi}{#2#1#3}
 \newcommand{\nb}[3]{
 		{\colorbox{#2}{\bfseries\sffamily\tiny\textcolor{white}{#1}}}
 		{\textcolor{#2}{\text{$\blacktriangleright$}{\textcolor{#2}{#3}}\text{$\blacktriangleleft$}}}}
@@ -51,41 +52,52 @@
 \LinesNumbered
 \RestyleAlgo{boxruled}
 \maketitle
-In this draft, I'm writting a summary of \cite{rujeerapaiboon_scenario_2022} to gather important elements of finite scenario reduction . Various proofs can get very technical and will be skipped for brevity. I'll also explore new ways of considering this problem.
+In this draft, I am writting a summary of \cite{rujeerapaiboon_scenario_2022} to gather results on finite scenario reduction and motivations. Several proofs can be very technical and will be omitted for brevity. I will also explore new insights on this problem.
 
 \section{Stability in stochastic programming}
 \subsection{Context and notions}
-Many stochastic programming models can be written as:
+Many Stochastic Programming (SP) models can be written as:
 \begin{equation}\label{stochastic}
 \min\left\{\int_\Xi F_0\left(x,\xi\right)\text{d}P\left(\xi\right)\:,\: x\in X, \: \int_\Xi F_j\left(x,\xi\right)\text{d}P\left(\xi\right)\leq0, j=1,...,d\right\}.
 \end{equation}
 
-Where $X\subset\RR^m$ is closed, $\Xi\subset\RR^s$ is closed, $F_j$ are random lsc functions for all $j\in\{0,...,d\}$ and $P$ is a Borel measure. The set $X$ does not depend on P and defines constraints on $x$. The goal of this part is to highlight a specific metric on distributions that would ensure that, if two distributions $\mathbb{P}, \mathbb{Q}$ are close, then the optimum of both models are close. To make it, we write:
+Here $X\subset\RR^m$ is closed, $\Xi\subset\RR^s$ is closed, $F_j$ are random lower semi-continuous functions for all $j\in\{0,...,d\}$ and $P$ is a Borel probability measure on $\Xi$. The set $X$ does not depend on $P$ and defines constraints on $x$. The goal of this part is to highlight a specific metric on distributions that would ensure that if two distributions $P$ and $Q$ are close, then the value of both SP models are close. We write:
 \begin{align*}
+    &\mathcal{X}\left(P\right)=\left\{x\in X, \int_\Xi F_j\left(x,\xi\right)\text{d}P\left(\xi\right)\leq0, j=1,...,d\right\}\\
     &v\left(P\right)=\inf\left\{\int_\Xi F_0\left(x,\xi\right)\text{d}P\left(\xi\right)\:,\: x\in \mathcal{X}\left(P\right)\right\} \\
     &X^*\left(P\right)=\argmin\left\{\int_\Xi F_0\left(x,\xi\right)\text{d}P\left(\xi\right)\:,\: x\in X, \: \int_\Xi F_j\left(x,\xi\right)\text{d}P\left(\xi\right)\leq0, j=1,...,d\right\}.
 \end{align*}
-So basicall, $v\left(P\right)$ denotes the optimal value, $X^*\left(P\right)$ the argmin set. Let $\mathcal{F}$ a class of measurable functions from $\Xi$ to $\RR$, a pseudometric quantifying distances between distributions is:
+So $\mathcal{X}\left(P\right)$ denotes the feasible set, $v\left(P\right)$ the optimal value of \eqref{stochastic} and $X^*\left(P\right)$ its set of minimizers. Let $\mathcal{F}$ a class of measurable functions from $\Xi$ to $\RR$, a pseudometric quantifying distances between distributions is:
 $$d_\mathcal{F}\left(P,Q\right)=\sup_{f\in\mathcal{F}}\lvert \int_\Xi f\left(\xi\right)\text{d}P\left(\xi\right) - \int_\Xi f\left(\xi\right)\text{d}Q\left(\xi\right)\rvert.$$
-This pseudometric can be a metric if $\mathcal{F}$ preserves the definition: $d_\mathcal{F}\left(P,Q\right)=0\implies P=Q$. An important family that we will use in this part is the family of locally Lipschitz continuous functions defined as: $\mathcal{F}_p\left(\Xi\right)$ for $p\geq1$: 
+$d_\mathcal{F}$ is symmetrical, $d_\mathcal{F}\left(P,P\right)=0$ and the triangle inequality is verified. Let $P,Q,R$ be three Borel probability measures and $f\in\mathcal{F}$:
+\begin{align*}
+    \lvert \int_\Xi f\left(\xi\right)\text{d}P\left(\xi\right)- \int_\Xi f\left(\xi\right)\text{d}Q\left(\xi\right)\rvert &= \lvert \int_\Xi f\left(\xi\right)\text{d}P\left(\xi\right)- \int_\Xi f\left(\xi\right)\text{d}R\left(\xi\right)+\int_\Xi f\left(\xi\right)\text{d}R\left(\xi\right)-\int_\Xi f\left(\xi\right)\text{d}Q\left(\xi\right)\rvert \\
+    &\leq \lvert \int_\Xi f\left(\xi\right)\text{d}P\left(\xi\right)- \int_\Xi f\left(\xi\right)\text{d}R\left(\xi\right)\rvert + \lvert \int_\Xi f\left(\xi\right)\text{d}R\left(\xi\right)-\int_\Xi f\left(\xi\right)\text{d}Q\left(\xi\right)\rvert \\
+    &\leq d_\mathcal{F}\left(P,R\right)+d_\mathcal{F}\left(R,Q\right)
+\end{align*}
+As the right-hand side of the inequality doesn't depend on $f$ any longer and this inequality holds for any $f\in\mathcal{F}$, we can easily conclude that for any $P,Q$ and $R$ Borel probability measures:
 $$
-\mathcal{F}_p\left(\Xi\right)=\left\{F:\Xi\to \RR: \lvert F\left(\xi\right)-F\left(\tilde{\xi}\right)\rvert \leq c_p\left(\xi,\tilde{\xi}\right)\lVert\xi-\tilde{\xi}\rVert, \forall \xi,\tilde{\xi}\in \Xi^2 \right\},
+d_\mathcal{F}\left(P,Q\right)\leq d_\mathcal{F}\left(P,R\right)+d_\mathcal{F}\left(R,Q\right)
 $$
-the parameter $p$ defines $c_p\left(\xi,\tilde{\xi}\right)=\max\left\{1,\lVert \xi\rVert, \lVert \tilde{\xi}\rVert\right\}^{p-1}$. We can now write $p$-th order Fortet-Mourier metrics, our first metrics on distributions:
+This pseudometric can be a metric if $\mathcal{F}$ preserves definiteness for instance if the functions can approximate pointwise indicator functions of any measurable sets. An important family that we will use in this part is the family of locally Lipschitz continuous functions  $\mathcal{F}_p\left(\Xi\right)$ defined for every $p\geq1$ by: 
 $$
-\zeta_p\left(P,Q\right)=\sup_{F\in\mathcal{F}_p\left(\Xi\right)}\lvert \int_\Xi F\left(\xi\right)\text{d}P\left(\xi\right)-\int_\Xi F\left(\xi\right)\text{d}Q\left(\xi\right)\rvert.
+\mathcal{F}_p\left(\Xi\right)=\left\{f:\Xi\to \RR: \lvert f\left(\xi\right)-f\left(\xi'\right)\rvert \leq c_p\left(\xi,\xi'\right)\lVert\xi-\xi'\rVert, \forall \xi,\xi'\in \Xi^2 \right\},
+$$
+where $p$ defines $c_p\left(\xi,\xi'\right)=\max\left\{1,\lVert \xi\rVert, \lVert \xi'\rVert\right\}^{p-1}$. We can now write $p$-th order Fortet-Mourier metrics, our first metrics on distributions:
+$$
+\zeta_p\left(P,Q\right)=\sup_{f\in\mathcal{F}_p\left(\Xi\right)}\lvert \int_\Xi f\left(\xi\right)\text{d}P\left(\xi\right)-\int_\Xi f\left(\xi\right)\text{d}Q\left(\xi\right)\rvert.
 $$
 \subsection{Result}
 Let $Q\in\mathcal{P}\left(\Xi\right)$, we write the perturbed model:
 \begin{equation*}
     \min\left\{\int_\Xi F_0\left(x,\xi\right)\text{d}Q\left(\xi\right)\:,\: x\in X, \: \int_\Xi F_j\left(x,\xi\right)\text{d}P\left(\xi\right)\leq0, j=1,...,d\right\},
 \end{equation*}
-which is basically \ref{stochastic} but with another distribution $P \to Q$. In this part we'll try to compare the notions we've presented in the part above, for instance, we want to bound $\lvert v\left(P\right)-v\left(Q\right)\rvert$ in terms of distribution metrics. \cite[Corollary 14]{romisch_stability_2003} gives:
+which is \eqref{stochastic} but with the distribution $Q$ instead of $P$. In this part we will try to compare the notions we have presented in the above part, for instance, we want to bound $\lvert v\left(P\right)-v\left(Q\right)\rvert$ in terms of distribution metrics. \cite[Corollary 14]{romisch_stability_2003} gives:
 \begin{theorem}\label{stability}
-    Let $d=0$ and assume that:
+    Let the number of constraints in \eqref{stochastic} be $d=0$ and assume that:
     \begin{enumerate}
-        \item $X^*\left(P\right)$ is nonempty and $\mathcal{U}$ is an open, bounded neighbourhood of $X^*\left(P\right)$.
-        \item $X$ is convex and $F_0\left(\cdot,\xi\right)$ is convex on $\RR^m$ for each $\xi\in\Xi$.
+        \item The  solution set $X^*\left(P\right)$ is nonempty and $\mathcal{U}$ is an open, bounded neighbourhood of $X^*\left(P\right)$.
+        \item The set $X$ is convex and $F_0\left(\cdot,\xi\right)$ is convex on $\RR^m$ for each $\xi\in\Xi$.
         \item there exist constants $L>0, p\geq1$ such that $\frac{1}{L}F_0\left(x,\cdot \right)\in\mathcal{F}_p\left(\Xi\right)$ for each $x\in X\cap cl\mathcal{U}$. 
     \end{enumerate}
     Then there exists a constant $\delta>0$ such that:
@@ -95,56 +107,87 @@ which is basically \ref{stochastic} but with another distribution $P \to Q$. In 
     \end{align*}
     Where $\Psi_p$ is defined in \cite[2.22-2.23]{romisch_stability_2003}. Whenever $Q\in\mathcal{P}\left(\Xi\right)$ with finite $p$-th order absolute moments and $\zeta_p\left(P,Q\right)<\delta$
 \end{theorem}
-This theorem (which is a corollary in the article) highlights two main aspects. Under the assumptions made and $d=0$, if you slightly perturb $P$ (meaning $Q$ is close to $P$ for the $p$-th order Fortet-Mourier metric), the optimal value is controlled, it can't change a lot. Another thing is that the set of optimal $x$ with $Q$ will remain close to the set of optimal $x$ with $P$. This is a result of stability. 
+These results shows two main aspects. Under the assumptions made and $d=0$, under slight perturbation of $P$ (in terms of Fortet-Mourier), the optimal value is controlled, it can't change a lot. Another thing is that the set of optimal $x$ with $Q$ will remain close to the set of optimal $x$ with $P$. This is a result of stability. 
 
-\subsection{Application to linear two-stage models}
+\subsection{Application to two-stage linear models}
 We consider a linear two-stage model with fixed recourse, this model is generically written as: 
 \begin{equation}\label{lp stoch}
-    \min\left\{c^Tx + \int_\Xi <q\left(\xi\right), y\left(\xi\right)> \text{d}P\left(\xi\right)\: :\: Wy\left(\xi\right)=h\left(\xi\right)-T\left(\xi\right)x\:,\: y\left(\xi\right)\:,\: x\in X \right\}.
+    \min\left\{c^Tx + \mathbb{E}_\xi\left(\inf_y q\left(\xi\right)^Ty \right)\: :\: Wy\left(\xi\right)=h\left(\xi\right)-T\left(\xi\right)x\:,\: y\left(\xi\right)\:,\: x\in X \right\}.
 \end{equation}
-Where $x$ is the first stage decision variable, $y$ the second. In order to fit in the definition of  \ref{stochastic}, we define:
+Where $x$ is called the first-stage decision variable, $y$ the second. The general idea of this model is a first-stage decision has to be made before observing $\xi$ even though you know the distribution of $\xi$. You must then choose $x$ so that it gives you the general best outcome. Then after observing $\xi$, $y$ is selected. One can note that the only decision you make is $x$ as $y$ is determined by $x$ and $\xi$. The term "fixed recourse" highlights the nature of $W$, $W$ is a fixed matrix that does not depend (in that case) on $\xi$. See \cite{wets_stochastic_1974} for a complete survey on linear two-stage programs with fixed recourse. In order to fit in the definition of  \ref{stochastic}, we define:
 $$
 F_0\left(x,\xi\right)=\begin{cases} 
-  \langle c, x \rangle + \phi(q(\xi), h(\xi) T(\xi)x) & h(\xi) T(\xi)x \in \text{pos}\left(W\right), q(\xi) \in D, \\
+  c^Tx + \phi\left(q\left(\xi\right), h\left(\xi\right) -T\left(\xi\right)x\right) & h\left(\xi\right)-     T\left(\xi\right)x \in \text{pos}\left(W\right), q\left(\xi\right) \in D, \\
   +\infty & \text{otherwise},
 \end{cases}
 $$
-where $\text{pos}(W)=\left\{Wy, y\in\RR_+^m\right\}$, $D=\left\{u\in\RR^m:\left\{z\in\RR^r:W^Tz \leq u\right\}\ne \emptyset\right\}$ and $\phi\left(u,t\right)=\inf\left\{\langle u,y\rangle: Wy=t, y\geq0\right\}$. \ref{lp stoch} can be rewritten as:
+where $\text{pos}(W)=\left\{Wy, y\in\RR_+^m\right\}$, $D=\left\{u\in\RR^m:\left\{z\in\RR^r:W^Tz \leq u\right\}\ne \emptyset\right\}$ and $\phi\left(u,t\right)=\inf\left\{ u^Ty : Wy=t, y\geq0\right\}$. \ref{lp stoch} can be rewritten as:
 \begin{equation}
     \min\left\{\int_\Xi F_0\left(x,\xi\right)\text{d}P\left(\xi\right): x\in X\right\}. 
 \end{equation}
 \rp{i'll write down a proof later as it does not appear on the article}
 One can note that $d=0$ in this formulation. We introduce two assumptions: 
-\begin{enumerate}
-    \item For each $\left(x,\xi\right)\in X\times \Xi$ it holds that $h(\xi) T(\xi)x) h(\xi) T(\xi)x \in \text{pos}\left(W\right), q(\xi) \in D$.
-    \item $P\in\mathcal{P}\left(\Xi\right)$ and has a finite $2$-th moment.
+\begin{enumerate}[label=(A\arabic*)]
+    \item\label{h1} For each $\left(x,\xi\right)\in X\times \Xi$ it holds that $h\left(\xi\right)- T\left(\xi\right)x\in \text{pos}\left(W\right), q\left(\xi\right) \in D$.
+    \item\label{h2} $P\in\mathcal{P}\left(\Xi\right)$ and has a finite $2$-th moment i.e. $\int_\Xi \lVert \xi\rVert^2\text{d}P\left(\xi\right) < \infty$.
 \end{enumerate}
 
+\begin{proposition}
+    Let \cref{h1} be satisfied. Then $F_0$ is a random convex function. Furthermore there exist constants $L>0, \bar{L}>0$, and $K>0$ such that the following holds for all $\xi,\xi'\in\Xi^2$ and $x,x'\in X^2$ with $\max\left\{\lVert x\rVert, \lVert x' \rVert\right\}\leq r$:
+    \begin{align}
+        \lvert F_0\left(x,\xi\right)- F_0\left(x,\xi'\right) &\leq Lr\max\left\{1,\lVert \xi\rVert, \lVert \xi'\rVert\right\}\lVert \xi-\xi'\rVert, \label{lips}\\
+        \lvert F_0\left(x,\xi\right)- F_0\left(x',\xi\right) &\leq \bar{L}\max\left\{1,\lVert\xi\rVert^2\right\}\lVert x-x'\rVert, \\
+        \lvert F_0\left(x,\xi\right) &\leq Kr\max\left\{1,\lVert\xi\rVert^2\right\}
+    \end{align}
+\end{proposition}
+\begin{proof}
+    See \cite{romisch_stability_2003}[Proposition 22].
+\end{proof}
+In this draft we will work with finite distribution, meaning that $\Xi$ is bounded. Let $\Xi$ be bounded, with \eqref{lips} we write:
+$$
+\lvert F_0\left(x,\xi\right)- F_0\left(x,\xi'\right) \leq L'r \lVert \lVert \xi-\xi'\rVert, \text{ with } L'=L\max_{\xi\in\Xi}\left\{1,\lVert\xi\rVert\right\}.
+$$
+This means that there exists a constant $C>0$ such that $\frac{1}{C}F_0\left(x,\cdot\right)\in\mathcal{F}_1\left(\Xi\right)$ for each $x\in X$ hence if we fix $U$ an open, bounded neighbourhood of $X^*\left(P\right)$ the result hold for each $x\in X\cap \text{cl}U\subset X$. 
 \begin{corollary}
-    Let both assumptions be satisfied and let $X^*\left(P\right)$ be nonempty and $\mathcal{U}$ be an open, bounded neighbourhood of $X^*\left(P\right).$ Then there exist constants $L>0$ and $\delta >0$ such that:
+    Let both assumptions \cref{h1} and \cref{h2} be satisfied, $\Xi$ be bounded and let $X^*\left(P\right)$ be nonempty and $\mathcal{U}$ be an open, bounded neighbourhood of $X^*\left(P\right).$ Then there exist constants $L>0$ and $\delta >0$ such that:
     \begin{align*}
-        \lvert v\left(P\right)-v\left(Q\right)\rvert \leq L\zeta_2\left(P,Q\right) \\
-        \emptyset \ne X^*\left(Q\right)\subset X^*\left(P\right)+\Psi_P\left(L\zeta_2\left(P,Q\right)\right)\mathbb{B}
+        \lvert v\left(P\right)-v\left(Q\right)\rvert \leq L\zeta_1\left(P,Q\right) \\
+        \emptyset \ne X^*\left(Q\right)\subset X^*\left(P\right)+\Psi_P\left(L\zeta_1\left(P,Q\right)\right)\mathbb{B}
     \end{align*}
-    whenever $Q\in\mathcal{P}\left(\Xi\right)$ and has a finite $2$-th moment and $\zeta_2\left(P,Q\right)<\delta$.
+    whenever $Q\in\mathcal{P}\left(\Xi\right)$ and has a finite $1$-th moment and $\zeta_1\left(P,Q\right)<\delta$.
 \end{corollary}
 \begin{proof}
-    This is an application of \Cref{stability} with $p=2$ where both assumptions are sufficient to ensure that conditions (2), (3) of \Cref{stability} are verified. See \cite[Proposition 22]{romisch_stability_2003}.
+    This is an application of \Cref{stability} with $p=1$ where both assumptions are sufficient to ensure that conditions (2), (3) of \Cref{stability} are verified. See \cite[Proposition 22]{romisch_stability_2003}.
 \end{proof}
-If we take a step back and consider a two-stage model with a distribution $P=\sum_{i\in I}\delta_{x_i}p_i$ with $n$ atoms with $n$ large. We may want to find another distribution close to $P$ (in terms of $\zeta_2$) so that $\lvert v\left(P\right)-v\left(Q\right)\rvert$ is controlled but with a reduced number of atoms to reduce run time when solving it on a computer. If you remember the definition of $p$-th order Fortet-Mourier metric:
+\begin{remark}
+    In \cite{romisch_stability_2003}, they do not assume that $\Xi$ is bounded and then the results hold with $p=2$.
+\end{remark}
+Consider now a two-stage model with a distribution $P=\sum_{i\in I}\delta_{x_i}p_i$ with $n$ atoms, $n$ is large. We may want to find another distribution $Q$ with a reduced number of atoms close to $P$ in terms of $\zeta_1$ so that $\lvert v\left(P\right)-v\left(Q\right)\rvert$ is controlled. Finding such a distribution $Q$ would reduce run time when solving the associated SP on a computer. Let's recall the definition of the $p$-th order Fortet-Mourier metric:
 $$
-\zeta_2\left(P,Q\right)=\sup_{F\in\mathcal{F}_2\left(\Xi\right)}\lvert \int_\Xi F\left(\xi\right)\text{d}P\left(\xi\right)-\int_\Xi F\left(\xi\right)\text{d}Q\left(\xi\right)\rvert.
+\zeta_1\left(P,Q\right)=\sup_{F\in\mathcal{F}_1\left(\Xi\right)}\lvert \int_\Xi F\left(\xi\right)\text{d}P\left(\xi\right)-\int_\Xi F\left(\xi\right)\text{d}Q\left(\xi\right)\rvert.
 $$
-where $\mathcal{F}_2\left(\Xi\right)=\left\{F:\Xi\to \RR: \lvert F\left(\xi\right)-F\left(\tilde{\xi}\right)\rvert \leq c_2\left(\xi,\tilde{\xi}\right)\lVert\xi-\tilde{\xi}\rVert, \forall \xi,\tilde{\xi}\in \Xi^2 \right\}$. It doesn't look very friendly. The idea is to bound $\zeta_2\left(P,Q\right)$ by another metric  the type-2 Wasserstein distance. We write $D\left(P,Q\right)$ probability measures for which marginals are $P$ and $Q$.
+where $\mathcal{F}_1\left(\Xi\right)=\left\{F:\Xi\to \RR: \lvert F\left(\xi\right)-F\left(\tilde{\xi}\right)\rvert \leq \lVert\xi-\xi'\rVert, \forall \xi,\xi'\in \Xi^2 \right\}$. Computing this $\sup$ over the Lipschitz functions tends to be hard nay impossible. We introduce $U\left(P,Q\right)$ the set of joint distributions whose marginals are $P$ and $Q$ and the type-$\ell$ Wasserstein distance: $$
+W_\ell\left(P,Q\right) = \left\{\min_{\pi\in U\left(P,Q\right)}\int_{\Xi^2}\lVert \xi-\xi'\rVert^l \text{d}\pi\left(\xi,\xi'\right)\right\}^{1/l}.$$
+Where $\lVert \cdot \rVert$ denotes the distance on $\Xi^2$ used to define $\mathcal{F}_1\left(\Xi\right)$. The next idea is to bound $\zeta_1$ by any $W_\ell$ which would be easier to compute.
 \begin{align*}
-    \zeta_2\left(P,Q\right)&= \sup_{F\in\mathcal{F}_2\left(\Xi\right)}\lvert \int_\Xi F\left(\xi\right)\text{d}P\left(\xi\right)-\int_\Xi F\left(\xi\right)\text{d}Q\left(\xi\right)\rvert \\
-    &\leq \sup_{F\in\mathcal{F}_2\left(\Xi\right)} \int_{\Xi \times \Xi} \lvert F\left(\xi\right)-F\left(\xi'\right)\rvert \eta\left(\text{d}\xi\times \text{d}\xi'\right), \text{ with } \eta\in D\left(P,Q\right) \\
-    &\leq \int_{\Xi \times \Xi} \max\left\{1,\lVert \xi\rVert, \lVert \xi'\rVert\right\} \lVert \xi -\xi'\rVert \eta\left(\text{d}\xi\times \text{d}\xi'\right), \text{ because } F\in\mathcal{F}_2\left(\Xi\right) \\
-    & \leq \left( \int_{\Xi \times \Xi}\max\left\{1,\lVert \xi\rVert, \lVert \xi'\rVert\right\}^2\eta\left(\text{d}\xi\times \text{d}\xi'\right)\right)^{1/2}\left(\int_{\Xi \times \Xi}\lVert \xi -\xi'\rVert^2\eta\left(\text{d}\xi\times \text{d}\xi'\right)\right)^{1/2} \\
-    &\leq K^2d_2\left(P,Q\right), \text{ where }K=\max_{\xi\in\Xi}{\lVert \xi\rVert}
+    \zeta_1\left(P,Q\right)&= \sup_{F\in\mathcal{F}_1\left(\Xi\right)}\lvert \int_\Xi F\left(\xi\right)\text{d}P\left(\xi\right)-\int_\Xi F\left(\xi\right)\text{d}Q\left(\xi\right)\rvert, \\
+    &=\mathcal{W}_1\left(P,Q\right), \quad \mathcal{W} \text{ being the dual of } W \text{, see \cite{peyre_computational_2019}[Chapter 6],}\\
+    &= W_1\left(P,Q\right), \quad \text{due to the duality theorem of Kantorovich-Rubinstein.}
 \end{align*}
-This new metric $d_2$ is the solution of an optimal transport problem ! Looks better.
-
+In order to choose a $\ell$ that will simplify the work, $\ell\in\left\{1,2\right\}$ actually, we will prove that $W_1\left(P,Q\right)\leq W_\ell\left(P,Q\right)$ for any $\ell \geq 1$.  Let $\ell >1$, $q>1$ such that $\frac{1}{\ell}+\frac{1}{q}=1$ and $\pi\in U\left(P,Q\right)$:
+\begin{align*}
+W_1\left(P,Q\right)&\leq \int_{\Xi^2}\lVert \xi-\xi'\rVert \text{d}\pi\left(\xi\times\xi'\right) \\ &\leq \left(\int_{\Xi^2} \lvert 1\rvert^{q}\text{d}\pi\left(\xi\times\xi'\right)\right)^{1/q} \left(\int_{\Xi^2}\lVert \xi-\xi'\rVert^\ell\text{d}\pi\left(\xi\times\xi'\right)\right)^{1/\ell}, \: \text{due to Hölder's inequality} \\
+&=\left(\int_{\Xi^2}\lVert \xi-\xi'\rVert^\ell\text{d}\pi\left(\xi\times\xi'\right)\right)^{1/\ell}
+\end{align*}
+We can now take the infimum over $\pi$ what gives:
+$$
+W_1\left(P,Q\right)\leq W_\ell\left(P,Q\right).
+$$
+For a two-stage linear model, we have proven that for $\ell\geq1$, there exists a constant $L>0$ such that:
+$$
+\lvert v\left(P\right)-v\left(Q\right)\rvert \leq LW_\ell\left(P,Q\right).
+$$
+In what will come next we will consider a finite distribution $P$ and try to find another distribution $Q$ with less atoms in order to minimize the type-$\ell$ Wasserstein distance between them. We will work with $\ell\in\left\{1,2\right\}$ for the theoretical part and $\ell=2$ for every simulation.
 \section{Wasserstein distance}
 In this part, we present tools and concepts useful for scenario reduction. We will define distance between two distributions : the Wasserstein distance is a good candidate. In the case of discrete distributions $\mathbb{P}=\sum_{i\in I}p_i\delta_{x_i}$ and $\mathbb{Q}=\sum_{j\in J}q_j\delta_{y_j}$, one can note that $x_i$ and $y_j$ must live in the same normed space ($\lVert\cdot\rVert$ denotes the norm). The type-$l$ Wasserstein distance between $\mathbb{P}$ and $\mathbb{Q}$ is defined as :  
 \[
@@ -816,7 +859,7 @@ The first-fit method relies on a linear exploration of the current solution unti
     $j\gets k$, $k$ randomly chosen in $ [\![0,i]\!]$  \\
     Exchange the value in $i^{\text{th}}$ position with the one in $j^{\text{th}}$.}
 \end{algorithm}
-For this simulation we use $n=100$ and $m$ as the $x$-axis. Note that we run 25 times the random first-fit method to get the plot "mean random first-fit"
+For this simulation we use $n=100$, $m$ as the $x$-axis and Dupačová starters. Note that we run 25 times the random first-fit method to get the plot "mean random first-fit"
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.5\textwidth]{plots/random first fit.pdf}
