--- a/biblio.bib
+++ b/biblio.bib
@@ -294,3 +294,18 @@
 	year = {1974},
 	pages = {309--339},
 }
+
+
+@book{shapiro_lectures_2009,
+	title = {Lectures on {Stochastic} {Programming}: {Modeling} and {Theory}},
+	isbn = {978-0-89871-687-0 978-0-89871-875-1},
+	shorttitle = {Lectures on {Stochastic} {Programming}},
+	url = {http://epubs.siam.org/doi/book/10.1137/1.9780898718751},
+	language = {en},
+	urldate = {2024-06-27},
+	publisher = {Society for Industrial and Applied Mathematics},
+	author = {Shapiro, Alexander and Dentcheva, Darinka and Ruszczyński, Andrzej},
+	month = jan,
+	year = {2009},
+	doi = {10.1137/1.9780898718751},
+}
